--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -7,8 +9,6 @@ __pycache__/
 *.so
 
 # Distribution / packaging
-.vs/
-.idea/
 .Python
 env/
 build/
@@ -56,7 +56,6 @@ coverage.xml
 local_settings.py
 
 # Flask stuff:
-logs/
 instance/
 .webassets-cache
 
@@ -90,3 +89,6 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+.idea/
+logs/
