--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+localconfig.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
