--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -9,6 +7,8 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+.vs/
+.idea/
 .Python
 env/
 build/
@@ -25,7 +25,6 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-localconfig.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -57,6 +56,7 @@ coverage.xml
 local_settings.py
 
 # Flask stuff:
+logs/
 instance/
 .webassets-cache
 
@@ -91,5 +91,5 @@ ENV/
 # Rope project settings
 .ropeproject
 
-.idea/
-logs/
+# local config
+localconfig.py
