--- a/logging.cfg
+++ b/logging.cfg
@@ -8,7 +8,7 @@ keys=consoleHandler, timedRotatingFileHandler
 keys=simpleFormatter
 
 [logger_root]
-level=DEBUG
+level=INFO
 handlers=consoleHandler, timedRotatingFileHandler
 qualname=apizen
 
